--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDiKif9h_5F8hNnTIOkqsZwc8GT6IIYYe0&libraries=geometry"></script>
   <script>
     var serviceWorkerVersion = '188921787';
     var scriptLoaded = false;
